test/param/loop/paramForLoopWrongCountType.good
paramForLoopWrongCountType.chpl:1: error: ranges in param for loop can only have integral count
