test/param/loop/paramForLoopWrongCountType.chpl
for param i in ..2#"" {
    writeln(i);
}